--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Code & Coffee
+email: oddvar@oddvar.org
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/blog/" # the subpath of your site, e.g. /blog/
+  Random caffeinated thoughts and experiements. Read at your own risk!
+baseurl: "/blog" # the subpath of your site, e.g. /blog/
 url: "http://oddvar.org" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: dollarone
+github_username:  oddvar
 
 # Build settings
 markdown: kramdown
